# function_analysis

./: .gitignore  README.md  commandLineArgumentParser.py  database.py  point.py  pyproject.toml  sqlConfiguration.py  sqlDatabase.py  test.py  test_test.py  training.py
.github/workflows/: ci.yml  ruff.yml
config/: database_configuration.json
data/: test.csv  train.csv
docs/: uml-function-analysis.drawio
src/: database.py  database_factory.py  function_analysis.py  mapping.py  mapping_factory.py
src/model/: baseCoordinates.py  base_coordinates.py  ideal.py  point.py  test.py  test_map.py  training.py
src/parser/: command_line_argument_parser.py
src/sql/: sqlDatabase.py  sql_configuration.py  sql_database.py
tests/: test_commandLineArgumentParser.py  test_command_line_argument_parser.py  test_database.py  test_mapping.py  test_sqlConfiguration.py  test_sqlDatabase.py  test_sql_configuration.py
