[tool.poetry]
name = "function-analysis"
package-mode = false
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.3.4"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["test_*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T201"]


[tool.coverage.run]
omit = [
    "test_*",
    ]
